@@ -1,7 +1,9 @@
 #pragma once
 #include "Game/Lara/lara_struct.h"
 
-void InitialiseLara(int restore);
-void LaraInitialiseMeshes(ItemInfo* item);
+void InitialiseLara(bool restore);
+void InitialiseLaraMeshes(ItemInfo* item);
 void InitialiseLaraAnims(ItemInfo* item);
 void InitialiseLaraLoad(short itemNumber);
+void InitialiseLaraLevelJump(short itemNum, LaraInfo* lBackup);
+void InitialiseLaraDefaultInventory();
